# many-framework

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  Cargo.toml  Makefile  README.md  WORKSPACE.bazel  cargo-bazel-lock.json  rust-toolchain.toml
.circleci/: config.yml
.github/: ci.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
docker/: .dockerignore  .gitignore  Makefile  build.dockerfile  docker-compose.yml
docker-nix/: Cargo.nix  Makefile  build-image.sh  docker-compose.jsonnet  flake.nix  generate-cargo-nix.sh  update_config.sh
docker/abci/: Dockerfile
docker/e2e/: Cargo.nix  Makefile  Makefile.common  Makefile.hybrid  Makefile.kvstore  Makefile.ledger  build-image.sh  chaos.sh  docker-compose-hybrid.jsonnet  docker-compose-kvstore.jsonnet  docker-compose-ledger.jsonnet  docker-compose.jsonnet  docker-compose.yml  flake.nix  generate-allow-addrs.sh  generate-cargo-nix.sh  ledger_log.txt  ledger_snapshot.sh  ledger_state.json  stop_node.sh  update_config.sh
docker/kvstore/: Dockerfile
docker/ledger/: Dockerfile
http_proxy/: Cargo.toml
http_proxy/src/: main.rs
kvstore/: Cargo.toml
kvstore/src/: main.rs
ledger/: Cargo.toml
ledger/src/: main.rs
omni/: Cargo.toml
omni-abci/: Cargo.toml
omni-abci/docs/: request-response.puml
omni-abci/src/: abci_app.rs  application.rs  info.rs  init.rs  lib.rs  main.rs  module.rs  omni_app.rs  types.rs
omni-echo/: Cargo.toml
omni-echo/src/: main.rs
omni-kvstore/: Cargo.toml
omni-kvstore/src/: lib.rs  module.rs  storage.rs  utils.rs
omni-ledger/: Cargo.toml
omni-ledger-abci/: Cargo.toml
omni-ledger-abci/src/: application.rs  http.rs  main.rs  omni_frontend.rs
omni-ledger-abci/src/application/: app.rs  driver.rs  error.rs
omni-ledger/src/: error.rs  main.rs  module.rs  storage.rs  utils.rs
omni-ledger/src/module/: balance.rs  burn.rs  info.rs  mint.rs  send.rs
omni/src/: cbor.rs  client.rs  identity.rs  lib.rs  main.rs  message.rs  protocol.rs  server.rs  transport.rs
omni/src/cbor/: cose.rs  message.rs  value.rs
omni/src/cbor/message/: error.rs  request.rs  response.rs
omni/src/identity/: cose.rs
omni/src/message/: error.rs  request.rs  response.rs
omni/src/protocol/: attributes.rs
omni/src/server/: function.rs  http.rs  module.rs  namespace.rs
omni/src/server/module/: base.rs
omni/src/transport/: http.rs
scripts/: create_pem.sh  run.sh  scan_db.sh  stage.sh
src/http_proxy/: Cargo.toml
src/http_proxy/src/: main.rs
src/idstore-export/: Cargo.toml
src/idstore-export/src/: main.rs
src/kvstore/: Cargo.toml
src/kvstore/src/: main.rs
src/ledger/: Cargo.toml
src/ledger-db/: Cargo.toml
src/ledger-db/src/: main.rs
src/ledger/src/: account.rs  main.rs  multisig.rs  tokens.rs
src/many-abci/: BUILD.bazel  Cargo.toml
src/many-abci/src/: abci_app.rs  main.rs  many_app.rs  module.rs
src/many-data/: Cargo.toml
src/many-data/src/: lib.rs  migrations.rs  module.rs
src/many-hwinfo/: Cargo.toml
src/many-hwinfo/src/: error.rs  lib.rs  main.rs  module.rs
src/many-kvstore/: BUILD.bazel  Cargo.toml
src/many-kvstore/src/: error.rs  main.rs  module.rs  storage.rs
src/many-kvstore/src/module/: account.rs  allow_addrs.rs  event.rs
src/many-kvstore/src/storage/: account.rs
src/many-kvstore/tests/: account.rs  events.rs  kvstore.rs  storage.rs
src/many-kvstore/tests/common/: mod.rs
src/many-ledger/: BUILD.bazel  Cargo.toml
src/many-ledger/src/: data_migration.rs  error.rs  json.rs  lib.rs  main.rs  migration.rs  module.rs  storage.rs
src/many-ledger/src/migration/: block_9400.rs  data.rs  dummy_hotfix.rs  memo.rs  nomic.rs  tokens.rs  transaction.rs
src/many-ledger/src/module/: abci.rs  account.rs  allow_addrs.rs  data.rs  event.rs  idstore.rs  idstore_webauthn.rs  ledger.rs  ledger_commands.rs  ledger_mintburn.rs  ledger_tokens.rs  multisig.rs
src/many-ledger/src/storage/: abci.rs  account.rs  data.rs  event.rs  idstore.rs  iterator.rs  ledger.rs  ledger_commands.rs  ledger_mintburn.rs  ledger_tokens.rs  multisig.rs
src/many-ledger/src/storage/migration_ext/: data.rs
src/many-ledger/test-macros/: BUILD.bazel  Cargo.toml
src/many-ledger/test-macros/src/: lib.rs
src/many-ledger/test-utils/: BUILD.bazel  Cargo.toml
src/many-ledger/test-utils/src/: cucumber.rs  lib.rs
src/many-ledger/tests/: account.rs  add_token_ext_info.rs  block.rs  common.rs  create_token.rs  events.rs  idstore.rs  iterator.rs  ledger.rs  ledger_commands.rs  ledger_transactions.rs  migration.rs  multisig.proptest-regressions  multisig.rs  remove_token_ext_info.rs  snapshot.rs  storage.rs  update_token.rs
src/many-ledger/tests/common/: many_cucumber.rs  mod.rs
src/many-ledger/tests/features/ledger_mintburn/: burn.feature  mint.feature
src/many-ledger/tests/features/ledger_tokens/: add_token_ext_info.feature  create_token.feature  remove_token_ext_info.feature  update_token.feature
src/many-ledger/tests/ledger_mintburn/: burn.rs  mint.rs
src/many-ledger/tests/ledger_tokens/: add_token_ext_info.rs  create_token.rs  remove_token_ext_info.rs  update_token.rs
src/many-ledger/tests/migration_/: memo.rs
src/omni-abci/: Cargo.toml
src/omni-abci/docs/: request-response.puml
src/omni-abci/src/: abci_app.rs  lib.rs  main.rs  module.rs  omni_app.rs  types.rs
src/omni-echo/: Cargo.toml
src/omni-hwinfo/: Cargo.toml
src/omni-hwinfo/src/: main.rs  module.rs
src/omni-kvstore/: Cargo.toml
src/omni-kvstore/src/: error.rs  main.rs  module.rs  storage.rs
src/omni-kvstore/src/module/: get.rs
src/omni-ledger/: Cargo.toml
src/omni-ledger/src/: lib.rs  main.rs  module.rs  storage.rs  utils.rs
src/omni-ledger/src/module/: account.rs  info.rs  ledger.rs
src/omni-ledger/src/module/account/: balance.rs  burn.rs  info.rs  mint.rs  send.rs
src/omni-ledger/src/module/ledger/: info.rs  list.rs
src/omni-ledger/tests/: iterator.rs
src/omni-module/: Cargo.toml
staging/: kvstore_state.json  ledger_state.json  ledger_state.json5
tests/e2e/: kvstore.bats  ledger.bats  multisig.bats  webauthn.bats
tests/resiliency/: catch-up.bats  migration.bats  (+2 more)
(+69 files in other folders)
