[workspace]

members = [
    "src/http_proxy",
    "src/idstore-export",
    "src/ledger",
    "src/kvstore",
    "src/many-abci",
    "src/many-kvstore",
    "src/many-ledger",
]

[profile.release]
strip = true  # Strip debug info from release build
lto = true  # Perform "fat" LTO
codegen-units = 1 # Improve the performance of the generated code at the cost of compile time
incremental = false

[profile.dev]
incremental = false

[patch."https://github.com/liftedinit/many-rs.git"]
many = { path = "../many-rs/src/many" }
many-client = { path = "../many-rs/src/many-client" }
many-client-macros = { path = "../many-rs/src/many-client-macros" }
many-error = { path = "../many-rs/src/many-error" }
many-identity = { path = "../many-rs/src/many-identity" }
many-identity-dsa = { path = "../many-rs/src/many-identity-dsa" }
many-identity-hsm = { path = "../many-rs/src/many-identity-hsm" }
many-identity-webauthn = { path = "../many-rs/src/many-identity-webauthn" }
many-macros = { path = "../many-rs/src/many-macros" }
many-migration = { path = "../many-rs/src/many-migration" }
many-mock = { path = "../many-rs/src/many-mock" }
many-modules = { path = "../many-rs/src/many-modules" }
many-protocol = { path = "../many-rs/src/many-protocol" }
many-server = { path = "../many-rs/src/many-server" }
many-types = { path = "../many-rs/src/many-types" }

[patch.crates-io]
ciborium = { git = "https://github.com/enarx/ciborium", rev = "2ca375e6b33d1ade5a5798792278b35a807b748e" }
ciborium-io = { git = "https://github.com/enarx/ciborium", rev = "2ca375e6b33d1ade5a5798792278b35a807b748e" }
