[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
hex = "0.4.3"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
omni = { path = "../omni" }
omni-kvstore = { path = "../omni-kvstore" }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
tokio = { version = "1.12.0", features = [ "full" ] }
