[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
crc-any = "2.4.0"
derive_builder = "0.10.2"
hex = "0.4.3"
lazy_static = "1.4.0"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
num-bigint = "0.4.3"
omni = { path = "../omni" }
omni-ledger = { path = "../omni-ledger" }
regex = "1.5.4"
ring = "0.17.0-alpha.10"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
tokio = { version = "1.12.0", features = [ "full" ] }
