[package]
name = "omni-abci"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
ciborium = { git = "https://github.com/enarx/ciborium" }
hex = "0.4.3"
minicose = { git = "https://github.com/l-1-labs/rust-minicose.git" }
omni = { path = "../omni" }
ring = "0.17.0-alpha.10"
tendermint-abci = { version = "0.21.0", features = [ "client" ] }
tendermint-proto = "0.21.0"
