[package]
name = "omni-abci"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omni-abci"
doc = false

[dependencies]
async-trait = "0.1.51"
ciborium = { git = "https://github.com/enarx/ciborium" }
clap = "3.0.0-beta.5"
hex = "0.4.3"
lazy_static = "1.4.0"
minicbor = "0.11.4"
minicose = { git = "ssh://git@github.com/l-1-labs/rust-minicose.git" }
omni = { path = "../omni" }
reqwest = "0.11.6"
tendermint = { git = "https://github.com/informalsystems/tendermint-rs.git" }
tendermint-abci = { git = "https://github.com/informalsystems/tendermint-rs.git" }
tendermint-rpc = { git = "https://github.com/informalsystems/tendermint-rs.git", features = [ "http-client" ] }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs.git" }
tokio = { version = "1.13.0", features = [ "full" ] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
