[package]
name = "omni-echo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
clap = "3.0.0-beta.5"
minicose = { path = "/Volumes/Sources/l-1-labs/rust-minicose" } # { git = "https://github.com/l-1-labs/rust-minicose.git" }
omni = { path = "../omni" }
pem = "1.0.0"
ring = "0.17.0-alpha.10"