[package]
name = "omni-ledger-abci"
version = "0.1.0"
authors = ["Hans Larsen <hans@larsen.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.4"
concat-arrays = "0.1.2"
cose-rust = { path = "/Users/hansl/Sources/hansl/cose-rust" }
hex = "0.4.3"
omni = { path = "../omni" }
rocket = "0.5.0-rc.1"
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_cose = "0.1.4"
sha3 = "0.9.1"
static_assertions = "1.1.0"
tendermint-abci = { version = "0.21.0", features = [ "binary", "kvstore-app" ] }
tendermint-proto = "0.21.0"
thiserror = "1.0.29"
tokio = "1.12.0"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
