[package]
name = "omni-ledger-abci"
version = "0.1.0"
authors = ["Hans Larsen <hans@larsen.online>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.4"
concat-arrays = "0.1.2"
hex = "0.4.3"
omni = { path = "../omni", features = [ "client" ] }
omni-abci = { path = "../omni-abci" }
minicbor = "0.11.3"
minicose = { git = "https://github.com/l-1-labs/rust-minicose.git", features = [ "allow-unsigned" ] }
ring = "0.17.0-alpha.10"
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_cose = "0.1.4"
sha3 = "0.9.1"
simple_asn1 = "0.5.4"
static_assertions = "1.1.0"
tendermint-abci = { version = "0.21.0", features = [ "client" ] }
tendermint-proto = "0.21.0"
thiserror = "1.0.29"
tiny_http = "0.9.0"
tokio = "1.12.0"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
