[package]
name = "omni-ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
clap = "3.0.0-beta.4"
hex = "0.4.3"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
minicbor = "0.11.5"
omni = { path = "../omni", features = [ "pem" ] }
omni-abci = { path = "../omni-abci" }
serde = "1.0.130"
serde_json = "1.0.72"
sha3 = "0.9.1"
simple_asn1 = "0.5.4"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
