[package]
name = "omni"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "omni"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
base32 = "0.4.0"
base64 = "0.13.0"
cbor-diag = "0.1.8"
clap = "3.0.0-beta.4"
cose-rust = "0.1.0"
crc-any = "2.4.0"
derive_builder = "0.10.2"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
minicbor = { version = "0.11.3", features = ["std"] }
pem = "1.0.0"
ring = "0.17.0-alpha.10"
serde = "1.0.130"
serde_cbor = "0.11.2"
sha3 = "0.9.1"
simple_asn1 = "0.5.4"
static_assertions = "1.1.0"
thiserror = "1.0.29"
