[package]
name = "omni"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "omni"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
base32 = "0.4.0"
base64 = "0.13.0"
cbor-diag = "0.1.8"
clap = "3.0.0-beta.5"
crc-any = "2.4.0"
derive_builder = "0.10.2"
hex = "0.4.3"
minicbor = { version = "0.11.3", features = ["derive", "std"] }
minicose = { path = "/Volumes/Sources/l-1-labs/rust-minicose" } # { git = "https://github.com/l-1-labs/rust-minicose.git" }
pem = "1.0.0"
regex = "1.5.4"
reqwest = { version = "0.11.5", features = ["blocking"] }
ring = "0.17.0-alpha.10"
serde = { version = "1.0.130", optional = true }
sha3 = "0.9.1"
simple_asn1 = "0.5.4"
static_assertions = "1.1.0"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = [ "full" ] }
tiny_http = "0.9.0"

[features]
default = []
