[package]
name = "http_proxy"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "http_proxy"
doc = false

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
many = { git = "https://github.com/liftedinit/many-rs.git", rev = "8afb5690f378c9ac2fe3ade9ccbbc7aeca6162ba" }
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "8afb5690f378c9ac2fe3ade9ccbbc7aeca6162ba" }
many-kvstore = { path = "../many-kvstore" }
new_mime_guess = "4.0.0"
tiny_http = "0.9.0"
tracing = "0.1.29"
tracing-subscriber = "0.3"
tracing-syslog = { git = "https://github.com/max-heller/tracing-syslog.git", rev = "6ff222831d7a78f1068d4c8af94dea215b07f114" }
tokio = { version = "1.12.0", features = [ "full" ] }
