[package]
name = "idstore-export"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "idstore-export"
doc = false

[dependencies]
base64 = "0.20.0-alpha.1"
clap = { version = "3.0.0", features = ["derive"] }
merk = { git = "https://github.com/liftedinit/merk.git", rev = "616027f1d3d502f225ec7b28a9eebbc667a1c5c7" }
serde = "1.0.137"
serde_json = "1.0.81"
