[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvstore"
doc = false

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
minicbor = { version = "0.12.0", features = ["derive", "std"] }
many = { git = "https://github.com/liftedinit/many-rs.git", rev = "ff06bda2094fed545d2134079cc4bb792a2388b2" }
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "ff06bda2094fed545d2134079cc4bb792a2388b2" }
many-kvstore = { path = "../many-kvstore" }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
tokio = { version = "1.12.0", features = [ "full" ] }
