[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "kvstore"
doc = false

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
indicatif = "0.16.2"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "50bcc41dc858ef8f9cba888c32b2ff2084b6575b" }
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "50bcc41dc858ef8f9cba888c32b2ff2084b6575b" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "50bcc41dc858ef8f9cba888c32b2ff2084b6575b" }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "50bcc41dc858ef8f9cba888c32b2ff2084b6575b", features = ["ed25519", "ecdsa"] }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "50bcc41dc858ef8f9cba888c32b2ff2084b6575b" }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "50bcc41dc858ef8f9cba888c32b2ff2084b6575b" }
many-types = { git = "https://github.com/liftedinit/many-rs.git", rev = "50bcc41dc858ef8f9cba888c32b2ff2084b6575b" }
syslog-tracing = "0.1"
tracing = "0.1.29"
tracing-subscriber = "0.3"
tokio = { version = "1.12.0", features = [ "full" ] }
