[package]
name = "ledger-db"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "ledger-db"
doc = false

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
hex = "0.4.3"
merk = { git = "https://github.com/MavenRain/merk.git", branch = "oobi/kvhash" }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74" }
many-types = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74" }
minicbor = "0.18.0"
