[package]
name = "ledger"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "ledger"
doc = false

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
crc-any = "2.4.0"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = "0.16.2"
lazy_static = "1.4.0"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
num-bigint = "0.4.3"
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "b649ee3709197dae3fdff883146d9ea6a13551c7" }
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "b649ee3709197dae3fdff883146d9ea6a13551c7" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "b649ee3709197dae3fdff883146d9ea6a13551c7" }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "b649ee3709197dae3fdff883146d9ea6a13551c7", features = ["ed25519", "ecdsa"]  }
many-identity-hsm = { git = "https://github.com/liftedinit/many-rs.git", rev = "b649ee3709197dae3fdff883146d9ea6a13551c7" }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "b649ee3709197dae3fdff883146d9ea6a13551c7" }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "b649ee3709197dae3fdff883146d9ea6a13551c7" }
many-types = { git = "https://github.com/liftedinit/many-rs.git", rev = "b649ee3709197dae3fdff883146d9ea6a13551c7" }
regex = "1.5.4"
ring = "0.16.20"
rpassword = "6.0"
syslog-tracing = "0.1"
tracing = "0.1.29"
tracing-subscriber = "0.3"
tokio = { version = "1.12.0", features = [ "full" ] }
