[package]
name = "ledger"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = ""
readme = "README.md"
homepage = "https://liftedinit.org"
repository = "https://github.com/liftedinit/many-framework"
keywords = ["cli", "web3", "blockchain", "tendermint", "proto", "crypto", "liftedinit"]
categories = ["command-line-utilities"]

[[bin]]
name = "ledger"
doc = false

[dependencies]
clap = { version = "3.0.0", features = ["derive"] }
crc-any = "2.4.0"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = "0.16.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
minicbor = { version = "0.18.0", features = ["derive", "std"] }
num-bigint = "0.4.3"
many-client = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74" }
many-error = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74" }
many-identity = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74", features = ["serde"] }
many-identity-dsa = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74", features = ["ed25519", "ecdsa"]  }
many-identity-hsm = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74" }
many-modules = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74" }
many-protocol = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74" }
many-types = { git = "https://github.com/liftedinit/many-rs.git", rev = "71eba1a1cfee506505acec865f5984afab0d3e74" }
regex = "1.5.4"
ring = "0.16.20"
rpassword = "6.0"
#serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
syslog-tracing = "0.1"
tracing = "0.1.29"
tracing-subscriber = "0.3"
tokio = { version = "1.24.1", features = [ "full" ] }
